# mastering-zephyr

./: notes  notes_macros_rust
002_za_threads_workq_ledburst/include/: led_flash.h  main.h
002_za_threads_workq_ledburst/src/: led_flash.c  main.c  thread.c
003_za_tilt_brick_breaker/: CMakeLists.txt  Kconfig  prj.conf
003_za_tilt_brick_breaker/boards/: fastbit_stm32nano_stm32f303xc.overlay
003_za_tilt_brick_breaker/docs/: display_perf_analysis.md  spec.md
003_za_tilt_brick_breaker/include/: config.h  display.h  game.h  game_types.h  ui_layout.h
003_za_tilt_brick_breaker/src/: display.c  game.c  main.c
003_za_tilt_brick_breaker_claude/: CLAUDE.md  CMakeLists.txt  debug.conf  prj.conf
003_za_tilt_brick_breaker_claude/.claude/: settings.local.json
003_za_tilt_brick_breaker_claude/boards/: fastbit_stm32nano_stm32f303xc.overlay
003_za_tilt_brick_breaker_claude/src/: display.c  display.h  game.c  game.h  hw_config.h  input.c  input.h  main.c  util.h
bak/001_za_led_blinky/src/: main.c
my-app-1/: CMakeLists.txt
